see https://github.com/Deuce1058/yardi/issues/107
yardi\
  WebContent\
    views\
      changePwd.html

--- a/WebContent/views/changePwd.html
+++ b/WebContent/views/changePwd.html
@@ -217,7 +217,7 @@
         var formData = JSON.stringify(formItems);
         $.ajax({
           type:     'POST',
-          url:      '../XdoLogin',
+          url:      '../doLogin',
           data:     formData,
           async:    false,
           dataType: "json", 
