See https://github.com/Deuce1058/yardi/issues/119
yardi\
  WebContent\
    views\
      passwordPolicy_CRUD.html

--- a/WebContent/views/passwordPolicy_CRUD.html
+++ b/WebContent/views/passwordPolicy_CRUD.html
@@ -220,7 +220,7 @@
         <label class="pl-sm-2" for="PPPwdMAxLen">Maximum password length</label>
       </div>
       <div class="form-group m-sm-3">
-        <input type="text" class="roundedCorners form-control-sm gtzero null" id="PPNbrRepeats" name="PPNbrRepeats"
+        <input type="text" class="roundedCorners form-control-sm gezero null" id="PPNbrRepeats" name="PPNbrRepeats"
           maxlength="4" size="1" required>
         <label class="pl-sm-2" for="PPNbrRepeats">Maximum repeated characters</label>
       </div>
